All tests pass for both databases. Mocha-Chai tests pass as well.

--- a/part-2/package.json
+++ b/part-2/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "db-init": "psql < schema.dql",
+    "db-init": "psql < schema.sql",
     "testdb-init": "export NODE_ENV=test && psql < schema_test.sql"
   },
   "author": "johnware15",
